# esp32Box_displayPic_Arduino

./: CMakeLists.txt  COPY_MCP_INSTRUCTIONS.md  README.md  arduino代码控制风车硬件.md  build.sh  copy_mcp_to_new_project.sh  find_device.py  find_ip.sh  fix_port.sh  flash_and_find_ip.sh  idf环境变量位置.md  partitions.csv  reconnect_wifi.sh  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.old  sdkconfig.old.backup  test_upload_mengm2.sh  update_wifi.sh  upload_image.sh  upload_image_http.py  upload_image_url.py  upload_simple.sh
components/mcp_client/: CMakeLists.txt  QUICK_START.md  mcp_client.c  package_for_migration.sh
components/windmill_control/: CMakeLists.txt  README.md  windmill_control.c  windmill_control.h
main/: CMakeLists.txt  Kconfig.projbuild  display_image.c  idf_component.yml
mcp_client_package/: AI_MIGRATION_PROMPT.md  COPY_TO_NEW_PROJECT.sh  HOW_TO_USE.md  MIGRATION_GUIDE.md  MIGRATION_INSTRUCTIONS.md  README.md  verify_component.sh
mcp_client_package/mcp_client/: CMakeLists.txt  README.md  mcp_client.h
